fullSandbox11072023/force-app/main/default/objects/Education_Record__c/Education_Record__c.object-meta.xml
<CustomObject>
    <description>OnControl and EZIO Training Records</description>
    <label>Education Record</label>
    <nameField>
        <label>IS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>