fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/A_V__c.field-meta.xml
<CustomField>
    <fullName>A_V__c</fullName>
    <label>A/V</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>