fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Access_to_Computer_Projector_Screen__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Computer_Projector_Screen__c</fullName>
    <label>Access to Computer, Projector &amp; Screen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>