fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Account_Facility__c.field-meta.xml
<CustomField>
    <fullName>Account_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account/Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>