fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Account_Lab_Contact_info_NamePhoneEmail__c.field-meta.xml
<CustomField>
    <fullName>Account_Lab_Contact_info_NamePhoneEmail__c</fullName>
    <inlineHelpText>Enter CMA contact information: Account/Lab contact info (Name, phone, email)</inlineHelpText>
    <label>Account/Lab Contact Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>