fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ActualHoursWorked__c.field-meta.xml
<CustomField>
    <fullName>ActualHoursWorked__c</fullName>
    <label>Actual Hours Worked</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>