fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Add_to_Teleflex_Academy__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Teleflex_Academy__c</fullName>
    <description>This controls a workflow that fires an email currently- eventually this will aid in integration.</description>
    <inlineHelpText>This will automatically send your education request to Teleflex Academy for an event link. Once your event is approved you will receive a link from Teleflex Academy to register and perform pre-work.</inlineHelpText>
    <label>Add to Teleflex Academy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>