fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/AgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>AgreementReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Train the Trainer</inlineHelpText>
    <label>Agreement Received</label>
    <type>Checkbox</type>
</CustomField>