fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Allocated_time_for_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Allocated_time_for_Speaker__c</fullName>
    <label>Allocated time for Speaker</label>
    <length>10</length>
    <type>Text</type>
</CustomField>