fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Alternate_Shipping_Details__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Shipping_Details__c</fullName>
    <label>Alternate Shipping Details</label>
    <type>TextArea</type>
</CustomField>