fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Amount_of_Time_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Time_Allocated__c</fullName>
    <label>Amount of Time Allocated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>