fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/AnticipatedTotalHoursRequired2__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedTotalHoursRequired2__c</fullName>
    <label>Anticipated Total Hours Required 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>