fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/AnticipatedTotalHoursRequired__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedTotalHoursRequired__c</fullName>
    <label>Anticipated Total Hours Required 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>