fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Arrival_Airport_Station__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Station__c</fullName>
    <label>Arrival Airport/Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>