fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Arrival_by__c.field-meta.xml
<CustomField>
    <fullName>Arrival_by__c</fullName>
    <inlineHelpText>What Date/Time does Clinical Contractor need to arrive by</inlineHelpText>
    <label>Arrival by Date/Time</label>
    <type>DateTime</type>
</CustomField>