fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Associate_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Associate_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is not visible to any users or on the page layout at this time.  Alexandra Eller will let us know when to make it live.  Has been approved by CE teams.</description>
    <inlineHelpText>This is only needed if a sales rep and an associate sales rep will both be on hand for the training.</inlineHelpText>
    <label>Associate Sales Rep (if applicable)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>