fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Associated_with_Conference_or_Event__c.field-meta.xml
<CustomField>
    <fullName>Associated_with_Conference_or_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated with Conference or Event?</label>
    <type>Checkbox</type>
</CustomField>