fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_AEM__c.field-meta.xml
<CustomField>
    <fullName>Attendees_AEM__c</fullName>
    <label>Attendees Hemorrhage - AEM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>