fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_Airway_MD__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Airway_MD__c</fullName>
    <label>Attendees EZ-IO - MD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>