fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_Emails__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Emails__c</fullName>
    <label>Attendees Emails</label>
    <type>TextArea</type>
</CustomField>