fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_EMS__c.field-meta.xml
<CustomField>
    <fullName>Attendees_EMS__c</fullName>
    <inlineHelpText>Actual # of attendees - Pre-hospital Providers</inlineHelpText>
    <label>Attendees Hemorrhage - EMS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>