fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_EZ_IO_RN__c.field-meta.xml
<CustomField>
    <fullName>Attendees_EZ_IO_RN__c</fullName>
    <label>Attendees EZ-IO - RN</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>