fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_Other__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Other__c</fullName>
    <inlineHelpText>Actual # of attendees</inlineHelpText>
    <label>Attendees Hemorrhage - Other</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>