fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_PM__c.field-meta.xml
<CustomField>
    <fullName>Attendees_PM__c</fullName>
    <label>Attendees Hemorrhage - PM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>