fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Attendees_VA__c.field-meta.xml
<CustomField>
    <fullName>Attendees_VA__c</fullName>
    <label>Attendees Hemorrhage - VA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>