fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/AttendeeType__c.field-meta.xml
<CustomField>
    <fullName>AttendeeType__c</fullName>
    <label>Attendee Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancing Physicians</fullName>
            </value>
            <value>
                <fullName>Fellows/Residents</fullName>
            </value>
            <value>
                <fullName>Allied Healthcare Professionals</fullName>
            </value>
            <value>
                <fullName>Sales/Clinical Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>