fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Audience_EZ_IO__c.field-meta.xml
<CustomField>
    <fullName>Audience_EZ_IO__c</fullName>
    <label>Audience EZ-IO</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nurses</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Physicians</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapists</fullName>
            </value>
            <value>
                <fullName>NP/PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>