fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Backup__c.field-meta.xml
<CustomField>
    <fullName>Backup__c</fullName>
    <inlineHelpText>If first choice is  not available</inlineHelpText>
    <label>Backup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Kits_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CDC-04041-HPK1A</fullName>
            </value>
            <value>
                <fullName>CDC-04052-HPK1A</fullName>
            </value>
            <value>
                <fullName>CDC-04063-HPK1A</fullName>
            </value>
            <value>
                <fullName>CDC-05041-HPK1A</fullName>
            </value>
            <value>
                <fullName>CDC-05531-PK1A</fullName>
            </value>
            <value>
                <fullName>CDC-05542-PK1A</fullName>
            </value>
            <value>
                <fullName>CDC-15552-HPK1A</fullName>
            </value>
            <value>
                <fullName>PI-01552-LS</fullName>
            </value>
            <value>
                <fullName>PR-04041-HPX</fullName>
            </value>
            <value>
                <fullName>PR-04052-HPX</fullName>
            </value>
            <value>
                <fullName>PR-05041-HPX</fullName>
            </value>
            <value>
                <fullName>PR-05052-HPX</fullName>
            </value>
            <value>
                <fullName>PR-05063-HPX</fullName>
            </value>
            <value>
                <fullName>PR-155521-HPX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>