fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Backup_OR_Specify_complete_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Backup_OR_Specify_complete_Product_ID__c</fullName>
    <label>OR Specify complete Product ID#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>