fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/BedCountSizeFx__c.field-meta.xml
<CustomField>
    <fullName>BedCountSizeFx__c</fullName>
    <formula>Text(Account_Facility__r.BedCountSize__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Count/Size:</label>
    <type>Text</type>
</CustomField>