fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <defaultValue>if(ISPICKVAL($User.Business_Unit__c, &quot;Alternate Care&quot;), &quot;Alternate Care&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Anesthesia&quot;), &quot;Anesthesia&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;EMS&quot;), &quot;EMS&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Interventional&quot;), &quot;Interventional&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Interventional Capital&quot;), &quot;Interventional Capital&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Respiratory&quot;), &quot;Respiratory&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Surgical Disposables&quot;), &quot;Surgical Disposables&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Surgical Instruments&quot;), &quot;Surgical Instruments&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Urology&quot;), &quot;Urology&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Vascular&quot;), &quot;Vascular&quot;,
if(ISPICKVAL($User.Business_Unit__c, &quot;Latin America&quot;), &quot;Latin America&quot;,
NULL
)))))))))))</defaultValue>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>Interventional Urology</fullName>
            </value>
            <value>
                <fullName>LatAm</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>