fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/BusinessNeed1__c.field-meta.xml
<CustomField>
    <fullName>BusinessNeed1__c</fullName>
    <label>Education Need 1?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>