fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/BusinessNeed2__c.field-meta.xml
<CustomField>
    <fullName>BusinessNeed2__c</fullName>
    <label>Business Need 2?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>