fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CallRequestSent__c.field-meta.xml
<CustomField>
    <fullName>CallRequestSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Request Sent</label>
    <type>Checkbox</type>
</CustomField>