fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CancelRecord__c.field-meta.xml
<CustomField>
    <fullName>CancelRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this check box if you need Cancel this training request.</inlineHelpText>
    <label>Cancel Record</label>
    <type>Checkbox</type>
</CustomField>