fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Car_Request__c.field-meta.xml
<CustomField>
    <fullName>Car_Request__c</fullName>
    <label>Car Transportation Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car Rental Requested</fullName>
            </value>
            <value>
                <fullName>Contractor driving personal vehicle</fullName>
            </value>
            <value>
                <fullName>Sales Rep providing transportation</fullName>
            </value>
            <value>
                <fullName>Taxi/Public Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>