fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CE_Hotel__c.field-meta.xml
<CustomField>
    <fullName>CE_Hotel__c</fullName>
    <label>CE Hotel</label>
    <summarizedField>CE_Reimbursement_Expense__c.CE_Total_Hotel__c</summarizedField>
    <summaryFilterItems>
        <field>CE_Reimbursement_Expense__c.Status__c</field>
        <operation>equals</operation>
        <value>Submit CRF, Submitted Manually (10/1/14 - 10/31/14), Approved for Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>CE_Reimbursement_Expense__c.Education_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>