fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CEM__c.field-meta.xml
<CustomField>
    <fullName>CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_RecordsCEM</relationshipName>
    <type>Lookup</type>
</CustomField>