fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CEPresentationPreparationTime__c.field-meta.xml
<CustomField>
    <fullName>CEPresentationPreparationTime__c</fullName>
    <label>CE Presentation Preparation Time</label>
    <summarizedField>CE_Reimbursement_Expense__c.TotalPresentation__c</summarizedField>
    <summaryForeignKey>CE_Reimbursement_Expense__c.Education_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>