fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Challenges_Barriers_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Barriers_Vetting__c</fullName>
    <label>Challenges / Barriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Past Negative Experience</fullName>
            </value>
            <value>
                <fullName>Clinical Competence/Fear</fullName>
            </value>
            <value>
                <fullName>Limited Resources/Inserters</fullName>
            </value>
            <value>
                <fullName>Lack of Standardization</fullName>
            </value>
            <value>
                <fullName>Low Volume</fullName>
            </value>
            <value>
                <fullName>Restrictive Policy</fullName>
            </value>
            <value>
                <fullName>Academic Center</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>