fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Educator2__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Clinical Educator</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Profile__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>TFX - Internal Resource</value>
        </filterItems>
        <filterItems>
            <field>Profile__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Profile__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>TFX - Internal Resource</value>
        </filterItems>
        <filterItems>
            <field>Profile__c.Active_Profile__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Education Records (Additional Clinical Educator)</relationshipLabel>
    <relationshipName>Education_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>