fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Educator__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed Clinical Educator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Confirmed Clinical Educator that is Active or Contact Clinical Affairs to activate the profile.</errorMessage>
        <filterItems>
            <field>Profile__c.Active_Profile__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Profile__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>TFX - Internal Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>