fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Educator_Converted_3__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator_Converted_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Educator Converted #3</label>
    <type>Checkbox</type>
</CustomField>