fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Educator_Email__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator_Email__c</fullName>
    <label>Clinical Educator Email</label>
    <type>Email</type>
</CustomField>