fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Educator_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator_Name__c</fullName>
    <formula>Clinical_Educator__r.Name</formula>
    <label>Clinical Educator Name</label>
    <type>Text</type>
</CustomField>