fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Clinical_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Outcomes__c</fullName>
    <description>Describe the expected clinical outcomes:</description>
    <label>Clinical Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>