fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CMA_Complete__c.field-meta.xml
<CustomField>
    <fullName>CMA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMA Complete</label>
    <type>Checkbox</type>
</CustomField>