fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CMAEmailhasbeenfired__c.field-meta.xml
<CustomField>
    <fullName>CMAEmailhasbeenfired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMA Email has been fired</label>
    <type>Checkbox</type>
</CustomField>